--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: auto;
+  margin: 0;
   padding: 0;
   text-align: center;
 }
@@ -16,23 +16,37 @@ li {
 
 .nav-list {
   margin: 0;
-  padding: 5%;
   text-transform: uppercase;
   font-family: Verdana, Tahoma, sans-serif;
 }
 
 #hero {
   background-image: url("../media/images/wallpaper.jpg");
-  margin-top: 0;
+  height: 800px;
+  max-width: 100%;
+  margin: 0;
+  padding: 2rem 0 0 0;
 }
-header {
-  margin: auto;
+
+#introduction {
   text-align: center;
+  background: pink;
+  position: relative;
+  top: 100px;
+}
+
+.container {
+  background-color: pink;
+  text-align: center;
+  width: 80%;
+  margin: auto;
 }
 
 section {
   height: 1080px;
   width: 100%;
+  padding: 1rem;
+  margin: auto;
   background-color: blanchedalmond;
 }
 
@@ -128,23 +142,11 @@ p {
   height: auto;
 }
 
-.projects-table {
-  padding: 0;
-  margin: auto;
-  max-width: 80%;
-}
-
 .project {
   background-color: white;
   margin: 1rem;
   border-radius: 10px;
   padding: 1rem;
-}
-
-.more-btn {
-  background-color: red;
-  border-radius: 10%;
-  padding: 0.5rem;
 }
 
 .project-image {
@@ -166,16 +168,16 @@ p {
 
 #blog {
   background-color: rgba(255, 255, 255, 0.801);
-}
-
-.blog-box {
-  position: absolute;
+  padding: 1rem 0 1rem;
+  height: 1000px;
 }
 
 /* Contact Me */
 
 #contact {
+  padding: 1rem 0 1rem;
   background-color: #ead6c4;
+  height: 1000px;
 }
 
 /* Footer */
