--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ li {
 
 #introduction {
   text-align: center;
-  background: pink;
+  /* background: pink; */
   padding: 3rem;
   width: 40%;
   margin: auto;
@@ -154,7 +154,7 @@ p {
   position: relative;
   left: 50%;
   bottom: 600px;
-  background-color: rgba(191, 125, 45, 0.586);
+  background-color: rgba(208, 135, 46, 0.357);
   border-radius: 10px;
   padding: 0;
   margin: 0;
