Restarted CSS with a mobile-first approach, working with m-queries from the start

--- a/style.css
+++ b/style.css
@@ -406,3 +406,9 @@ footer {
 [aos='fade'].aos-animate {
   opacity: 1;
 }
+
+/*****************************************/
+/*****************************************/
+/************* MEDIA QUERIES *************/
+/*****************************************/
+/*****************************************/
