--- a/styles.css
+++ b/styles.css
@@ -177,20 +177,22 @@ h1 {
   /************ PROJECTS ***********/
   .grid-container {
     display: grid;
-    grid-template-columns: auto;
-    padding: 10px;
+    grid-template-columns: 50% 50%;
+    padding: 5px;
   }
 
   #project-image {
-    min-width: 85%;
-    margin: 1rem;
+    width: 85%;
+    /* margin: 1rem; */
+    padding: 0;
     object-fit: cover;
   }
   .proj-desc {
-    max-width: 90%;
+    width: 80%;
     margin: 0 auto 2rem;
     font-size: 14px;
   }
+
   /************ BLOG ***********/
 
   .story-card {
